# library-agent

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
agents/: catalog_agent.py  catalog_plugin.py  content_agent.py  content_plugin.py  llm.py  orchestrator.py  smoke_test.py
api/: app.py
docs/: DECISIONS.md
ingestion/: chunk.py  clean.py  download.py  embed.py  query.py  shelf.json  vector_store.py
